--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "lodash": "^4.17.10",
     "mongoose": "^5.1.0",
     "multer": "^1.3.0",
+    "node-gyp": "^3.6.2",
+    "node-pre-gyp": "^0.10.0",
     "nodemailer": "^4.6.5",
     "nodemailer-express-handlebars": "^3.0.0",
     "path": "^0.12.7"
